@startuml
'https://plantuml.com/class-diagram

interface PropFactory{
+createProp(AbstractAircraft abstractAircraft):GameProp
}
class BlpropFactory{
+createProp(AbstractAircraft abstractAircraft):GameProp
}
class BopropFactory{
+createProp(AbstractAircraft abstractAircraft):GameProp
}
class BupropFactory{
+createProp(AbstractAircraft abstractAircraft):GameProp
}

abstract class AbstractProp{
 + AbstractProp(int locationX, int locationY, int speedX, int speedY)
 + forward()
 + {abstract} effect(HeroAircraft heroAircraft)
}

class BloodProp{
 + BloodProp(int locationX, int locationY, int speedX, int speedY)
 + forward()
 + effect(HeroAircraft heroAircraft)
}

class BombProp{
 + BombProp(int locationX, int locationY, int speedX, int speedY)
 + forward()
 + effect(HeroAircraft heroAircraft)
}

class BulletProp{
 + BulletProp(int locationX, int locationY, int speedX, int speedY)
 + forward()
 + effect(HeroAircraft heroAircraft)
}

PropFactoryDemo .up.> PropFactory
PropFactoryDemo .down.> AbstractProp

BlpropFactory ..|> PropFactory
BupropFactory ..|>PropFactory
BopropFactory ..|>  PropFactory

AbstractProp  <|-- BloodProp
AbstractProp  <|-- BombProp
AbstractProp <|-- BulletProp

BlpropFactory ..> BloodProp : create
BupropFactory ..> BulletProp : create
BopropFactory ..> BombProp:create
@enduml